# Live2D-win64

./: .gitignore  CMakeLists.txt  README.md
src/: LAppDefine.cpp
